Fix overlay on iOS and reduce opacity

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -37,6 +37,7 @@ html {
     background-size: cover;
     background-position: center right;
     background-repeat: no-repeat;
+    position: relative;
 
     .overlay {
         display: none;
@@ -63,7 +64,7 @@ html {
             width: 100%;
             top: 0;
             left: 0;
-            background-color: rgba($color: #000000, $alpha: 0.6);
+            background-color: rgba($color: #000000, $alpha: 0.2);
         }
     }
 
